# epb-ecaas-api

./: .gitignore  README.md  buildspec.yml  commit_template.txt  justfile
api/: .terraform.lock.hcl  backend_ecaas_api_integration.hcl  main.tf  modules.tf  variables.tf
api/modules/api_gateway/: api_gateway.tf  variables.tf
buildspec/: api_gateway.yml  build_hem_lambda.yml  deploy_hem_lambda.yml  test_hem_lambda.yml
documentation/: README.md  demo_fhs_input.json  example_response.json  fhs_input.schema.json  openapi.yaml  redoc-static.html
lambda/: .gitignore  Cargo.toml  Makefile  README.md  hem  pcdb
lambda/examples/: api_gateway_demo_fhs_bottomup.json
lambda/src/: main.rs
