[package]
name = "ecaas-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["std", "serde"]}
hem = { path = "hem", features = ["fhs"] }
lambda_http = { version = "0.15.1", default-features = false, features = ["apigw_rest", "apigw_http"] }
openssl = { version = "0.10.73", features = ["vendored"] }
parking_lot = "0.12.4"
sentry = "0.41.0"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[profile.release]
# keep debug symbols for now
debug = true
# adopt unwind behaviour for panics for now (remove when we have no more panics!)
panic = "unwind"
